--- a/_assets/css/views/main.scss
+++ b/_assets/css/views/main.scss
@@ -125,7 +125,7 @@ header{
 	float: left;
 	background: $white;
 	overflow: auto;
-	margin-bottom: 20px;
+	padding-bottom: 20px;
 	@include transition(width 0.2s ease-in-out);
 }
 
